Add whatsapp in contacts section in footer

--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
         <hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
         <p><a href="#"><i class="fa fa-envelope white-text mr-4" aria-hidden="true"></i>tenexpgroup@gmail.com</a></p>
         <p><a href="#"><i class="fa fa-phone white-text mr-4" aria-hidden="true"></i>+7(999)999 99 99</a></p>
-        <!--<p><a href="#"><i class="fa fa-whatsapp white-text mr-4" aria-hidden="true"></a></p>-->
+        <p><a href="#"><i class="fa fa-whatsapp white-text mr-4" aria-hidden="true"></a></p>
       </div>
     </div>
   </div>
