--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <title>TenExp Group Limited</title>
+  <title>TenExp Group Ltd.</title>
   <!-- Font Awesome -->
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css">
   <!-- Bootstrap core CSS -->
@@ -69,7 +69,7 @@
         <div class="row d-flex justify-content-center text-center">
           <div class="col-md-10">
             <h2 class="display-4 font-weight-bold white-text pt-5 mb-2">
-              TenExp Group Ltd.
+              TenExp Group Limited
             </h2>
             <hr class="hr-light">
             <h4 class="white-text my-4">Здесь полноценное описание организации. Какой-нибудь рекламный лозунг.</h4>
